# project-the-project

./: CMakeLists.txt
game-the-game/: CMakeLists.txt
game-the-game/include/: camera.h  draw.h  drawable.h  error.h  event.h  gamepad.h  init.h  sdl.h  space.h  sprite.h  state.h  timing.h
game-the-game/source/: cleanup.c  draw.c  error.c  event.c  gamepad.c  init.c  main.c  state.c  timing.c
gtg/: CMakeLists.txt
gtg/include/: sdl.h  std.h
gtg/source/: main.c  sdl.c
resources/game-the-game/sprites/: sprite-1.aseprite  sprite-2.aseprite  sprite-block.aseprite  sprite-player.aseprite  sprite-sky.aseprite
resources/s1/sprites/: sprite-sky.aseprite
s1/: CMakeLists.txt
s1/include/: camera.h  draw.h  drawable.h  error.h  event.h  gamepad.h  init.h  sdl.h  space.h  sprite.h  state.h  timing.h  vector.h
s1/source/: cleanup.c  draw.c  error.c  event.c  gamepad.c  init.c  main.c  state.c  timing.c
scripts/: build.sh  configure.sh  format-all.sh  format.sh  init.sh  millis.sh  run.sh  seconds.sh
